examples/kubernetes/deployments/infra/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: agogos
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        # resources:
        #   requests:
        #     memory: "128Mi"
        #     cpu: "10m"
        #   limits:
        #     memory: "512Mi"
        #     cpu: "30m"
---
kind: Service
apiVersion: v1
metadata:
  namespace: agogos
  name: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: grpc
      port: 81
      targetPort: 81
