examples/kubernetes/deployments/infra/schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: graphql
  name: schema-registry
spec:
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - name: schema-registry
        image: schema-registry
        imagePullPolicy: Never
---
kind: Service
apiVersion: v1
metadata:
  namespace: graphql
  name: schema-registry
spec:
  selector:
    app: schema-registry
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: grpc
      port: 81
      targetPort: 81
