examples/kubernetes/deployments/infra/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: gql-controller
webhooks:
  - name: schema-validation-webhook.graph.platform
    rules:
      - apiGroups:
          - "agogos"
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gqlschemas
        scope: "Namespaced"
    failurePolicy: Ignore
    clientConfig:
      service:
        namespace: "agogos"
        name: "gql-controller"
        path: "/validate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVvRENDQW9nQ0NRQytiYWw3VncyYUxqQU5CZ2txaGtpRzl3MEJBUXNGQURBU01SQXdEZ1lEVlFRRERBZG4KY21Gd2FIRnNNQjRYRFRFNU1EUXhOakl3TlRZd05sb1hEVEl3TURReE5USXdOVFl3Tmxvd0VqRVFNQTRHQTFVRQpBd3dIWjNKaGNHaHhiRENDQWlJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFOYjlJdXEwCjZwTlZuaENwV3hsUWhHcUg2dVpOcHZEc0pUMHNCVTdSTEsvQzRKdk1SZ0hzWGdwaHRhT3JIdkYySnpDLzFINnoKUUQwMGtkTjN5SzQwNnBpY2N5QWlwZmZLOC9qeDR3SkZBQnFkL2g0TzZaT0o0UnNzTnpyTHQ4TTErMWZGcExnVApjQUxYbTZPbUFF [...]
    admissionReviewVersions:
      - v1beta1
    timeoutSeconds: 1
